--- a/src/app/Components/layout/Modales/modal-producto/modal-producto.component.html
+++ b/src/app/Components/layout/Modales/modal-producto/modal-producto.component.html
@@ -35,7 +35,7 @@
             <mat-grid-tile>
                 <mat-form-field appearance="outline">
                     <mat-label>Precio</mat-label>
-                    <input matInput autocomplete="off" formControlName="stock" type="precio">
+                    <input matInput autocomplete="off" formControlName="precio" type="text">
                     <mat-icon matSuffix>attach_money</mat-icon>
                 </mat-form-field>
             </mat-grid-tile>
