set styles to reporte .css

--- a/src/app/Components/layout/Pages/reporte/reporte.component.html
+++ b/src/app/Components/layout/Pages/reporte/reporte.component.html
@@ -51,7 +51,7 @@
 
                 <ng-container matColumnDef="numeroVenta">
                     <th mat-header-cell *matHeaderCellDef> Numero de venta</th>
-                    <td mat-cell *matCellDef="let element"> {{element.numeroVenta}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.nemeroDocumento}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="tipoPago">
