fix some things

--- a/src/app/Components/layout/layout.component.html
+++ b/src/app/Components/layout/layout.component.html
@@ -10,7 +10,7 @@
     <label style="font-size: 14px; margin-right: 20px;">
       {{correoUsuario}} | {{rolUsuario}}
     </label>
-    <button mat-icon-button (click)="cerrarSesion">
+    <button mat-icon-button (click)="cerrarSesion()">
        <mat-icon>logout</mat-icon>
     </button>
 
